// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headroom should render correct if state is pinned, transition 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  z-index: 1;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
  -webkit-animation-duration: 0.2s;
  animation-duration: 0.2s;
  -webkit-animation-timing-function: ease-out;
  animation-timing-function: ease-out;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
}

<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  zIndex={1}
>
  <Headroom__HeaderWrapper
    animateUpFrom={null}
    static={false}
    top={0}
    transition="normal"
    translateY={0}
    zIndex={1}
  >
    <div
      className="c0"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
</Headroom>
`;

exports[`Headroom should render correct if state is static, no transition 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  top: -50px;
  z-index: 1;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
  -webkit-animation-duration: 0.2s;
  animation-duration: 0.2s;
  -webkit-animation-timing-function: ease-out;
  animation-timing-function: ease-out;
  -webkit-transition: none;
  transition: none;
}

<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  zIndex={1}
>
  <Headroom__HeaderWrapper
    animateUpFrom={null}
    static={true}
    top={-50}
    transition="none"
    translateY={0}
    zIndex={1}
  >
    <div
      className="c0"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
</Headroom>
`;

exports[`Headroom should render correct if state is unpinned, no transition 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  z-index: 1;
  -webkit-transform: translateY(-50px);
  -ms-transform: translateY(-50px);
  transform: translateY(-50px);
  -webkit-animation-duration: 0.2s;
  animation-duration: 0.2s;
  -webkit-animation-timing-function: ease-out;
  animation-timing-function: ease-out;
}

<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  zIndex={1}
>
  <Headroom__HeaderWrapper
    animateUpFrom={null}
    static={false}
    top={0}
    transition="none"
    translateY={-50}
    zIndex={1}
  >
    <div
      className="c0"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
</Headroom>
`;

exports[`Headroom should render correct if state is unpinned, transition 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  z-index: 1;
  -webkit-transform: translateY(-50px);
  -ms-transform: translateY(-50px);
  transform: translateY(-50px);
  -webkit-animation-duration: 0.2s;
  animation-duration: 0.2s;
  -webkit-animation-timing-function: ease-out;
  animation-timing-function: ease-out;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
}

<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  zIndex={1}
>
  <Headroom__HeaderWrapper
    animateUpFrom={null}
    static={false}
    top={0}
    transition="normal"
    translateY={-50}
    zIndex={1}
  >
    <div
      className="c0"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
</Headroom>
`;

exports[`Headroom should render with no stickyAncestor supplied 1`] = `
<Headroom__HeaderWrapper
  animateUpFrom={null}
  static={true}
  top={-50}
  transition="none"
  translateY={0}
  zIndex={1}
>
  <MockNode />
</Headroom__HeaderWrapper>
`;

exports[`Headroom should render with values from its state 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  top: -50px;
  z-index: 1;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
  -webkit-animation-duration: 0.2s;
  animation-duration: 0.2s;
  -webkit-animation-timing-function: ease-out;
  animation-timing-function: ease-out;
  -webkit-transition: none;
  transition: none;
}

<Headroom
  height={100}
  pinStart={0}
  scrollHeight={50}
  zIndex={1}
>
  <Headroom__HeaderWrapper
    animateUpFrom={null}
    static={true}
    top={-50}
    transition="none"
    translateY={0}
    zIndex={1}
  >
    <div
      className="c0"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
</Headroom>
`;
